<resources>
    <string name="app_name">assignment2app</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="save">Save</string>
    <string name="add_student">Add Student</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
</resources>